Refactorizacion Generacion de DAOS. Queries Callbacks Algunos TEST

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -18,7 +18,8 @@ movimiento.fechaHora.pasado=La fechay hora del movimiento debe ser menor o igual
 movimiento.descripcion=La descripcion del movimiento se debe informar obligatoriamente
 movimiento.monto=El monto del movimiento dede ser mayor que CERO
 movimiento.cuenta=Debe informarse la cuenta vinculada al movimiento
-movimiento.origenDestino=La cuenta origen o destino de la transferencia debe informarse obligatoriamente
+movimiento.cuentaOrigen=La cuenta origen de la transferencia debe informarse obligatoriamente
+movimiento.cuentaDestino=La cuenta destino de la transferencia debe informarse obligatoriamente
 movimiento.cajaCajero=La caja o cajero donde se realizo el movimiento debe informarse obligatoriamente
 movimiento.cotizacion=La cotizacion de la operacion de Cambio se debe informar obligatoriamente
 
