todos los servicios consumo de apirest de ambio

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -7,6 +7,7 @@ direccion.provincia=La provincia se debe informar obligatoriamente
 cliente.nombre=El nombre del cliente se debe informar obligatoriamente
 cliente.apellido=El apellido del cliente se debe informar obligatoriamente
 cliente.direccion=La direccion del cliente se debe informar obligatoriamente
+cliente.email=El formato de email es invalido
 cuenta.fechaCreacion=La fecha de creacion de la cuenta se debe informar obligatoriamente
 cuenta.fechaCreacion.pasado=La fecha de creacion debe ser menor o igual a hoy
 cuenta.saldoInicial=El saldo inicial de la cuenta se debe informar obligatoriamente
